cluster/media/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
        - image: ghcr.io/onedr0p/sonarr-develop:4.0.0.539@sha256:dc7860e1117cb040435c2eace3fc4d67a64672e671c3e692d19df2a98d4dede4
          name: sonarr
          resources:
            requests:
              cpu: 1000m
              memory: 650Mi
            limits:
              cpu: 2000m
              memory: 1Gi
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: torrents-v2
              mountPath: /torrents
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: torrents-v2
          persistentVolumeClaim:
            claimName: torrents-v2
