cluster/media/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  rules:
    - host: sonarr.sko.ai
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port: 
                  number: 80
            path: /
            pathType: Prefix
